2005-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile: Removed System.Runtime.Remoting dependency.
	* Mono.Posix.dll.sources: Added new files:
	Mono.Remoting.Channels.Unix/UnixBinaryClientFormatterSink.cs
	Mono.Remoting.Channels.Unix/UnixBinaryClientFormatterSinkProvider.cs
	Mono.Remoting.Channels.Unix/UnixBinaryCore.cs
	Mono.Remoting.Channels.Unix/UnixBinaryServerFormatterSink.cs
	Mono.Remoting.Channels.Unix/UnixBinaryServerFormatterSinkProvider.

2005-07-30  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : csc build fix.

2005-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Posix.dll.sources: Add the Unix remoting channel to the build.
	* Makefile: Add System.Runtime.Remoting dependency.

2005-02-28  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile (TEST_MCS_FLAGS): Ignore warnings 0219 (variable declared and
	  never used) and 0618 (member is obsolete): this is test code, which
	  produces lots of unused variables and tests [Obsolete] members.

2005-02-28  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix_test.dll.sources: Added Test/Mono.Unix/StdioFileStreamTest.cs.

2005-01-13  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix_test.dll.sources: Added Test/Mono.Unix/StdlibTest.cs.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add Mono.Unix/StdioFileStream.cs.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* Makfile: Add testsuite.
	* Mono.Posix_test.dll.sources: Added; Files for testsuite.
	* Test: Directory added.

2004-12-28  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add UnixDriveInfo and UnixPath.

2004-11-22  Raja R Harinath  <rharinath@novell.com>

	* Makefile (CLEAN_FILES): Clean up make-map.exe and the duplicated
	Mono.Posix.dll.

2004-11-18  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add Mono.Unix/CdeclFunction.cs to the build.

2004-11-16  Jonathan Pryor  <jonpryor@vt.edu>

	+ Rename the Mono.Posix namespace to Mono.Unix.