@@ -1,4 +1,5 @@
 Mono.Unix/StdioFileStreamTest.cs
 Mono.Unix/StdlibTest.cs
-Mono.Unix/UnixUserTest.cs
 Mono.Unix/UnixGroupTest.cs
+Mono.Unix/UnixMarshalTest.cs
+Mono.Unix/UnixUserTest.cs
