@@ -1,3 +1,7 @@
+2005-10-17  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* UnixMarshalTest.cs: Added string marshaling tests for Mono.Unix.UnixMarshal.
+
 2005-06-29  Miguel de Icaza  <miguel@ximian.com>
 
 	* StdioFileStreamTest.cs: comment out tests that depend on the
